working almost everything - explore optional in node name, find real id of node and astar
